Implement proper user sign in with tests

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,8 @@
 <%= provide(:title, 'Sign up')%>
 <h1>Sign up</h1>
-<%= form_for @user do |f| %>
+<%= form_for(@user, url: signup_path) do |f| %>
+    <%= render 'shared/error_messages',object: f.object%>
     <%= f.label :name %>
     <%= f.text_field :name %>
-    <%= f.label :email %>
-    <%= f.email_field :email %>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
     <%= f.submit 'Sign up'%>
 <% end %>
-
