--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>All Events</h1>
 <div class='container'>
-    <ul class='event_list'>
+    <ul class='events'>
         <%= render @events %>
     </ul>
 </div>
