--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,11 +2,11 @@
 <h1><%= @event.location %></h1>
 <div class='event_info'>
     <span>created by: <%= link_to @event.creator.name, @event.creator%></span></br>
-    <span><%= @event.date%></span>
+    <span><%= @event.date.strftime("%A, %B %d, %Y at %r") %></span>
     <div><%= @event.description%></div>
     <span><%= pluralize(@event.attendees.count, 'attendee')%></span>
     <% if @event.attendees.any? %>
-        <ol id='attendees'>
+        <ol class='attendees'>
             <% @event.attendees.each do |attendee| %>
                 <li><%= link_to attendee.name, attendee %></li>
             <% end %>
