--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,20 @@
-<%= provide(:title, @user.name + "'s profile")%>
-<h1><%= @user.name + "'s events" %></h1>
+<%= provide(:title, @user.name)%>
+<h1><%= @user.name + "'s Profile" %></h1>
 <div class='container'>
-    <ul class='eventList'>
-        <% if @user.events.any? %>
-            <%= render @events %>
-        <% end %>
-    </ul>
+    <div>
+        <h2><%= @user.name %>'s events:</h2>
+        <ul class='event_list'>
+            <% if @events.any? %>
+                <%= render @events %>
+            <% end %>
+        </ul>
+    </div>
+    <div>
+        <h2><%= @user.name %> is attending:</h2>
+        <ul class='event_list'>
+            <% if @attended_events.any? %>
+                <%= render @attended_events%>
+            <% end %>
+        </ul>
+    </div>
 </div>
