--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,18 +1,26 @@
 <%= provide(:title, @event.location)%>
-<h1><%= @event.location %></h1>
-<div class='event_info'>
-    <span>created by: <%= link_to @event.creator.name, @event.creator%></span></br>
+<div class='center jumbotron jumbotron-fluid bg-transparent'>
+<div class='container container-fluid'>
+    <h1><%= @event.location %></h1>
     <span><%= @event.date.strftime("%A, %B %d, %Y at %r") %></span>
-    <div><%= @event.description%></div>
-    <span><%= pluralize(@event.attendees.count, 'attendee')%></span>
-    <% if @event.attendees.any? %>
-        <ol class='attendees'>
-            <% @event.attendees.each do |attendee| %>
-                <li><%= link_to attendee.name, attendee %></li>
-            <% end %>
-        </ol>
-    <% end %>
+    <div class='event_info'>
+        <span>created by: <%= link_to @event.creator.name, @event.creator%></span>
+    </div>
+    <div class='event_info' id='description'>
+        <span>Event Details:</span>
+        <span><%= @event.description%></span>
+    </div>    
+    <div>
+        <span><%= pluralize(@event.attendees.count, 'attendee')%>:</span>
+        <% if @event.attendees.any? %>
+            <ol class='attendees'>
+                <% @event.attendees.each do |attendee| %>
+                    <li><%= link_to attendee.name, attendee %></li>
+                <% end %>
+            </ol>
+        <% end %>
+    </div>
 </div>
-
+</div>
 
 
