Add tests for events#index and add log out
Configured integration tests for events#index with pagination.

Wrote tests for pagination in Users#show.

Added log out and tested that link works.

Wrote #previous_events and #upcoming_events in User.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
             <%= link_to 'Browse Events', events_url, class:'nav-item nav-link' %>
             <% if logged_in? %>
                 <%= link_to 'Profile', current_user, class: 'nav-item nav-link' %>
-                <%= link_to 'Log out', '#', class: 'nav-item nav-link' %>
+                <%= link_to 'Log out', logout_path, method: :delete, class: 'nav-item nav-link' %>
             <% else %>
                 <%= link_to 'Log in', login_path, class: 'nav-item nav-link' %>
             <% end %>
