--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
             <%= render 'events/form' %>
         <% else %>
             <h1>Find events that excite you</h1>
-            <%= link_to 'Sign up to start browing events near you today!', signup_path%>
+            <%= link_to 'Sign up to start browing events near you today!', signup_path, class: 'btn btn-dark'%>
         <% end %>
     </div>
 </div>
