--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= provide(:title, @user.name)%>
 <div class='center jumbotron jumbotron-fluid bg-transparent'>
     <div class="container container-fluid">
-        <h1><%= @user.name + "'s Profile" %></h1>
+        <h1><%= @user.name %></h1>
         <% if @events.any?%>
             <h2><%= @user.name %>'s events:</h2>
             <ol class='events'>
