Add #prev and #upcoming scopes to Event
First created as methods, then refactored to scopes.

Refactored _header.html.erb to have links to previous and upcoming
events. The links send the event type to the EventsController in
params[:events].

Refactored Events#index to trigger either the previous or upcoming
events scope, depending on what was sent in the params. If the user
navigates to '/events', upcoming events are used by default. In this
way, the index shows either previous or upcoming events, but not both.

Properly updated the application.js and gemfile to finish pulling in
bootstrap 4.

Updated Users#new view to the current theme.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,14 +1,7 @@
 <%= provide(:title, 'All Events') %>
-
 <div class='center jumbotron jubotron-fluid bg-transparent'>
     <div class='container container-fluid'>
-        <h1>All Events</h1>
-        <ol>
-            <%= will_paginate @events%>
-            <div class='events'>
-                <%= render @events %>
-            </div>
-            <%= will_paginate @events%>
-        </ol>
+        <h1><%= @header %></h1>
+        <%= render 'event_list', events: @events%>
     </div>
 </div>
