--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
             <%= link_to 'Site Name', root_url, class: 'navbar-brand' %>
         </div>
         <div class='navbar-nav'>
-            <%= link_to 'Browse Events', events_url, class:'nav-item nav-link' %>
+            <%= link_to 'Browse Previous Events', events_url(events: {type: 'prev'}), class:'nav-item nav-link' %>
+            <%= link_to 'Browse Upcoming Events', events_url(events: {type: 'upcoming'}), class:'nav-item nav-link' %>
             <% if logged_in? %>
                 <%= link_to 'Profile', current_user, class: 'nav-item nav-link' %>
                 <%= link_to 'Log out', logout_path, method: :delete, class: 'nav-item nav-link' %>
