--- a/app/views/rsvps/edit.html.erb
+++ b/app/views/rsvps/edit.html.erb
@@ -1,4 +1,3 @@
-<%= provide(:title, @event.location)%>
 <h1><%= @event.location %></h1>
 <span><%= @event.date.strftime("%A, %B %d, %Y at %r") %></span>
 <div class='event_info'>
@@ -19,5 +18,19 @@
                 <li><%= link_to attendee.name, attendee %></li>
             <% end %>
         </ol>
+    <% end %>
+</div>
+<div class='container container-fluid'>
+    <%= form_for @rsvp do |f|%>
+        <div class="form-check form-check-inline col-md-4 offset-md-2">
+            <%= f.radio_button :accepted, true, class: 'form-check-input'%>
+            <%= f.label :accepted, 'Going', class: 'form-check-label'%>
+        </div>
+        <div class="form-check form-check-inline col-md-4">
+            <%= f.radio_button :accepted, false, class: 'form-check-input'%>
+            <%= f.label :accepted, "Can't Make It", class: 'form-check-label'%>
+        </div></br></br>
+        
+        <%= f.submit :Respond, class: 'col-md-4 btn btn-dark'%>
     <% end %>
 </div>
