--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,13 +1,15 @@
-<%= form_for(@event, url: new_event_path) do |f| %>
+<%= form_for(@event, url: events_path) do |f| %>
     <%= render 'shared/error_messages', object: f.object%>
     <div class='form-row'>
-        <div class='form-group col-md-5 offset-md-1 '>
+        <div class='form-group col-md-10 offset-md-1'>
             <%= f.label :location %>
             <%= f.text_field :location, placeholder: 'Location', class: 'form-control'%>
         </div>
-        <div class='form-group col-md-5'>
-            <%= f.label :date %>
-            <%= f.text_field :date, placeholder: 'Date', class: 'form-control'%>
+    </div>
+    <div class='form-row'>
+        <div class='form-group col-md-12'>
+            <%= f.label :date %></br>
+            <%= f.datetime_select(:date, {}, {class: 'custom-select col-md-2'})%>
         </div>
     </div>
     <div class='form-row'>
