--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,13 @@
 <header >
-    <nav class='navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark'>
-        <div class='navbar-header'>
-            <%= link_to 'Site Name', root_url, class: 'navbar-brand' %>
+    <nav class='navbar navbar-fixed-top navbar-expand-lg d-flex navbar-dark bg-dark'>
+        <div class='navbar-header d-flex mr-auto'>
+            <%= link_to 'Hostr', root_url, class: 'navbar-brand' %>
         </div>
-        <div class='navbar-nav'>
+        <div class='navbar-nav '>
             <%= link_to 'Browse Previous Events', events_url(events: {type: 'prev'}), class:'nav-item nav-link' %>
             <%= link_to 'Browse Upcoming Events', events_url(events: {type: 'upcoming'}), class:'nav-item nav-link' %>
             <% if logged_in? %>
+                <%= link_to 'Invitations', invitations_path, class: 'nav-item nav-link' %>
                 <%= link_to 'Profile', current_user, class: 'nav-item nav-link' %>
                 <%= link_to 'Log out', logout_path, method: :delete, class: 'nav-item nav-link' %>
             <% else %>
