--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,28 @@
 <%= provide(:title, @user.name)%>
-<div class='center jumbotron jumbotron-fluid bg-transparent'>
-    <div class="container container-fluid">
-        <h1><%= @user.name %></h1>
-        <% if @events.any?%>
-            <h2><%= @user.name %>'s events:</h2>
-            <ol class='events'>
-                <%= will_paginate @events %>
-                <%= render @events %>
-                <%= will_paginate @events %>
-            </ol>
-        <% end%>
-        <% if @prev_events.any?%>
-            <h2><%= @user.name %> has attended:</h2>
-            <ol class='events'>
-                <%= will_paginate @prev_events %>
-                <%= render @prev_events%>
-                <%= will_paginate @prev_events %>
-            </ol>
-        <% end%>
-        <% if @upcoming.any?%>
-            <h2><%= @user.name%> is attending:</h2>
-            <ol class='events'>
-                <%= will_paginate @upcoming %>
-                <%= render @upcoming%>
-                <%= will_paginate @upcoming %>
-            </ol>
-        <% end %>
-    </div>
-</div>
+
+<h1><%= @user.name %></h1>
+<%= link_to 'Create an event', root_path %>
+<% if @events.any?%>
+    <h2><%= @user.name %>'s events:</h2>
+    <ol class='events'>
+        <%= will_paginate @events %>
+        <%= render @events %>
+        <%= will_paginate @events %>
+    </ol>
+<% end%>
+<% if @prev_events.any?%>
+    <h2><%= @user.name %> has attended:</h2>
+    <ol class='events'>
+        <%= will_paginate @prev_events %>
+        <%= render @prev_events%>
+        <%= will_paginate @prev_events %>
+    </ol>
+<% end%>
+<% if @upcoming.any?%>
+    <h2><%= @user.name%> is attending:</h2>
+    <ol class='events'>
+        <%= will_paginate @upcoming %>
+        <%= render @upcoming%>
+        <%= will_paginate @upcoming %>
+    </ol>
+<% end %>
