Finalize app functionality for demo
Rewrote seeds.db to round out the app's demo functionality.

Modified User#previous_events and User#upcoming_events to only pull
events that users have accepted invitations to.

Renamed Users#check_invites view to 'rsvps.html.erb' to preserve the
naming convention of the Rsvp model. Renamed variables in
Users#check_invites and 'users/rsvps.html.erb' to follow suit.

Modified Rsvps#edit view to remove invitation link and to show attending
and skipping users.

Wrote custom validator to prevent users from creating events that take
place in the past. Changed start date of the event creation form to the
year of the current time to make the form more user friendly.

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -9,7 +9,7 @@
     <div class='form-row'>
         <div class='form-group col-md-12'>
             <%= f.label :date %></br>
-            <%= f.datetime_select(:date, {}, {class: 'custom-select col-md-2'})%>
+            <%= f.datetime_select(:date, {start_year:Date.today.year}, {class: 'custom-select col-md-2'})%>
         </div>
     </div>
     <div class='form-row'>
